--- a/contact.htm
+++ b/contact.htm
@@ -104,9 +104,22 @@
                 Last Name:
                 <input type="text" name="lastName" size="25" />
             </label>
+            <br/>
             <label>
                 Email:
                 <input type="email" name="email" size="50" />
+            </label>
+            <label>
+                Phone:
+                <input type="range" id="myNumber" size="10" min="0" max="9999999999"/>
+            </label>
+            <br />
+            Preferred Contact Method: <br />
+            <label>Email:
+                <input type="radio" name="method" />
+            </label>
+            <label>Phone:
+                <input type="radio" name="method" />
             </label>
         </h3>
     </form>
