--- a/contact.htm
+++ b/contact.htm
@@ -111,7 +111,7 @@
             </label>
             <label>
                 Phone:
-                <input type="range" id="myNumber" size="10" min="0" max="9999999999"/>
+                <input type="text" name="lastName" size="10" max="10" />
             </label>
             <br />
             Preferred Contact Method: <br />
