--- a/contact.htm
+++ b/contact.htm
@@ -50,6 +50,8 @@
         }
 
         h3 {
+            margin-top: 15px;
+            margin-bottom: 15px;
             color: white;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
