--- a/contact.htm
+++ b/contact.htm
@@ -118,7 +118,7 @@
             </label>
             <br />
             <br />
-            Preferred Contact Method: <br />
+            <em> Preferred Contact Method: </em><br />
             <label>Email:
                 <input type="radio" name="method" />
             </label>
