--- a/contact.htm
+++ b/contact.htm
@@ -125,6 +125,15 @@
             <label>Phone:
                 <input type="radio" name="method" />
             </label>
+            <br />
+            <br />
+            <label>Subject:
+                <select name="subject">
+                    <option> Question </option>
+                    <option> Problem </option>
+                    <option> Order Status Update </option>
+                </select>
+            </label>
         </h3>
     </form>
 </body>
