--- a/contact.htm
+++ b/contact.htm
@@ -56,7 +56,10 @@
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
+        label{
 
+            font-family: Verdana, Helvetica, sans-serif;
+        }
         form {
             margin-left: auto;
             margin-right: auto;
@@ -130,10 +133,15 @@
             <label>Subject:
                 <select name="subject">
                     <option> Question </option>
+                    <option> Price Quote </option>
                     <option> Problem </option>
                     <option> Order Status Update </option>
                 </select>
             </label>
+            <br/>
+            <textarea name="comments" rows="6" cols="50">
+
+            </textarea>
         </h3>
     </form>
 </body>
