--- a/contact.htm
+++ b/contact.htm
@@ -60,6 +60,13 @@
 
             font-family: Verdana, Helvetica, sans-serif;
         }
+       textarea
+       {
+           border-color: gray;
+           border-bottom-style: solid;
+           border-width: thick;
+            font-family: Verdana, Helvetica, sans-serif;
+        }
         form {
             margin-left: auto;
             margin-right: auto;
@@ -139,6 +146,7 @@
                 </select>
             </label>
             <br/>
+            <br />
             <textarea name="comments" rows="6" cols="50">
 
             </textarea>
