--- a/contact.htm
+++ b/contact.htm
@@ -64,7 +64,14 @@
        {
            border-color: gray;
            border-bottom-style: solid;
-           border-width: thick;
+           border-width: medium;
+            font-family: Verdana, Helvetica, sans-serif;
+        }
+       input
+       {
+           border-color: gray;
+           border-bottom-style: solid;
+           border-width: medium;
             font-family: Verdana, Helvetica, sans-serif;
         }
         form {
