--- a/contact.htm
+++ b/contact.htm
@@ -60,20 +60,14 @@
 
             font-family: Verdana, Helvetica, sans-serif;
         }
-       textarea
+       textarea, input, select
        {
            border-color: gray;
            border-bottom-style: solid;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif;
         }
-       input
-       {
-           border-color: gray;
-           border-bottom-style: solid;
-           border-width: medium;
-            font-family: Verdana, Helvetica, sans-serif;
-        }
+      
         form {
             margin-left: auto;
             margin-right: auto;
@@ -154,7 +148,7 @@
             </label>
             <br/>
             <br />
-            <textarea name="comments" rows="6" cols="50">
+            <textarea name="comments" rows="10" cols="75">
 
             </textarea>
         </h3>
