--- a/contact.htm
+++ b/contact.htm
@@ -69,8 +69,7 @@
         }
       
         form {
-            margin-left: auto;
-            margin-right: auto;
+           
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
@@ -108,7 +107,7 @@
         We will contact you as soon as possible.
     </h3>
     <hr/>
-    <form action= "">
+    <form action= "" style="align-content:center">
         <h3 style="text-align:center">
             <label> First Name:
                 <input type="text" name="firstName" size="20" />
