--- a/contact.htm
+++ b/contact.htm
@@ -150,6 +150,10 @@
             <textarea name="comments" rows="10" cols="75">
 
             </textarea>
+            <br />
+            <br />
+            <input type="submit" value="Submit Form" />
+            <input type="reset" value="Reset Form" />
         </h3>
     </form>
 </body>
