--- a/contact.htm
+++ b/contact.htm
@@ -73,7 +73,8 @@
         }
       
         form {
-           
+           margin-left: 50px;
+            margin-right: 50px;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
