--- a/contact.htm
+++ b/contact.htm
@@ -65,7 +65,7 @@
        {
            margin-left: 10px;
             margin-right: 10px;
-           border-color: gray;
+           border-color: lightblue;
            border-bottom-style: solid;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif;
