--- a/contact.htm
+++ b/contact.htm
@@ -73,8 +73,8 @@
         }
       
         form {
-           margin-left: 100px;
-            margin-right: 100px;
+           margin-left: 25%;
+            margin-right: 75%;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
