--- a/contact.htm
+++ b/contact.htm
@@ -73,8 +73,9 @@
         }
       
         form {
-           margin-left: 25%;
-            margin-right: 75%;
+            display:inline-block;
+           margin-left: 200px;
+            margin-right: 200px;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
