--- a/contact.htm
+++ b/contact.htm
@@ -74,8 +74,9 @@
       
         form {
             display:inline-block;
-           margin-left: 200px;
-            margin-right: 200px;
+
+           margin-left: auto;
+            margin-right: auto;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
