--- a/contact.htm
+++ b/contact.htm
@@ -73,7 +73,7 @@
         }
       
         form {
-            display:inline-block;
+            display:inline;
 
            margin-left: auto;
             margin-right: auto;
