--- a/contact.htm
+++ b/contact.htm
@@ -75,6 +75,7 @@
         form {
            margin-left: auto;
             margin-right: auto;
+            width: 500px;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
@@ -101,7 +102,7 @@
             Dimension Assets
         </h1>
         <h2 style="text-align:center">
-            Contact
+            Contact Information
         </h2>
     </blockquote>
     <hr/>
