--- a/contact.htm
+++ b/contact.htm
@@ -75,7 +75,7 @@
         form {
            margin-left: auto;
             margin-right: auto;
-            width: auto;
+            width: 512px;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
