--- a/contact.htm
+++ b/contact.htm
@@ -32,9 +32,24 @@
             
             padding-left: 15px;
             padding-right: 15px;
-            color: lightgray;
             font-size: large;
              font-family: Verdana, Helvetica, sans-serif;
+        }
+        a:link
+        {
+            color:lightblue;
+        }
+         a:visited
+        {
+            color:lightgray;
+        }
+          a:hover
+        {
+            color:lightgreen;
+        }
+          a:active
+        {
+            color:lightyellow;
         }
 
         h1 {
