--- a/assets.htm
+++ b/assets.htm
@@ -4,6 +4,22 @@
 <head>
     <meta charset="utf-8">
     <style type="text/css">
+         a:link
+        {
+            color:lightblue;
+        }
+         a:visited
+        {
+            color:lightgray;
+        }
+          a:hover
+        {
+            color:lightgreen;
+        }
+          a:active
+        {
+            color:darkgreen;
+        }
         body {
             background-image: url(images/indexbackground2b.jpg);
             background-repeat: no-repeat;
