--- a/contact.htm
+++ b/contact.htm
@@ -49,7 +49,7 @@
         }
           a:active
         {
-            color:lightyellow;
+            color:darkgreen;
         }
           select:hover 
         {
