--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,22 @@
 <head>
   <meta charset="utf-8">
     <style type="text/css">
-     
+      a:link
+        {
+            color:lightblue;
+        }
+         a:visited
+        {
+            color:lightgray;
+        }
+          a:hover
+        {
+            color:lightgreen;
+        }
+          a:active
+        {
+            color:darkgreen;
+        }
          body {
             background-image: url(images/indexbackground.jpg);
             background-repeat: no-repeat;
