--- a/contact.htm
+++ b/contact.htm
@@ -51,9 +51,9 @@
         {
             color:darkgreen;
         }
-          select:hover 
+          option:hover 
         {
-         color:lightblue;
+         color:lightgreen;
         }
 
         h1 {
@@ -104,7 +104,7 @@
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
-            border-color: gray;
+            border-color: lightblue;
             border-width:thick;
             color: white;
             text-align: center;
