--- a/contact.htm
+++ b/contact.htm
@@ -56,6 +56,10 @@
          color:lightgreen;
         }
 
+          input:hover
+        {
+          color:lightblue;
+        }
         h1 {
             margin-top: 30px;
             color: white;
@@ -133,7 +137,7 @@
     <hr/>
     <h3 style="text-align:center">
         If you have any questions regarding your order, assets, asset packages, <br/>
-        or you need a price qoute for your project, please submit the form below.<br />
+        or you would like a price qoute for your project, please submit the form below.<br />
         We will contact you as soon as possible.
     </h3>
     <hr/>
