--- a/contact.htm
+++ b/contact.htm
@@ -181,7 +181,7 @@
             </label>
             <br/>
             <br />
-            <textarea name="comments" rows="10" cols="75">
+            <textarea name="comments" rows="10" cols="75" style="align-content:center">
 
             </textarea>
             <br />
