--- a/contact.htm
+++ b/contact.htm
@@ -182,12 +182,12 @@
             <br/>
             <br />
             <textarea name="comments" rows="10" cols="75" style="align-content:center">
-
+                Comments
             </textarea>
             <br />
             <br />
             <input type="submit" value="Submit Form" />
-            <input type="reset" value="Reset Form" />
+            <input type="reset" value="Clear Form" />
         </h3>
     </form>
 </body>
