--- a/contact.htm
+++ b/contact.htm
@@ -85,7 +85,7 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         
-       textarea, input, select
+       input, select
        {
            margin-left: 1px;
             margin-right: 25px;
@@ -97,7 +97,12 @@
 
        textarea
        {
+           margin:auto;
             width: 100%;
+            border-color: lightblue;
+           border-bottom-style: solid;
+           border-width: medium;
+            font-family: Verdana, Helvetica, sans-serif; 
 
        }
         select:hover 
