--- a/contact.htm
+++ b/contact.htm
@@ -97,7 +97,8 @@
 
        textarea
        {
-           margin:auto;
+           margin-left:25px;
+            margin-right:25px;
             width: 100%;
             border-color: lightblue;
            border-bottom-style: solid;
