--- a/contact.htm
+++ b/contact.htm
@@ -191,7 +191,7 @@
             </label>
             <br/>
             <br />
-            <textarea name="comments" rows="10" cols="75" style="align-content:center">
+            <textarea name="comments" rows="10">
             </textarea>
             <br />
             <br />
