--- a/contact.htm
+++ b/contact.htm
@@ -97,8 +97,8 @@
 
        textarea
        {
-           margin-left:25px;
-            margin-right:25px;
+           margin-left:auto;
+            margin-right:auto;
             width: 100%;
             border-color: lightblue;
            border-bottom-style: solid;
