--- a/contact.htm
+++ b/contact.htm
@@ -91,7 +91,7 @@
             margin-right: 25px;
            border-color: lightblue;
            border-bottom-style: solid;
-           border-width: medium;
+           border-width: thin;
             font-family: Verdana, Helvetica, sans-serif;       
         }
 
@@ -102,7 +102,7 @@
             width: 100%;
             border-color: lightblue;
            border-bottom-style: solid;
-           border-width: medium;
+           border-width: thin;
             font-family: Verdana, Helvetica, sans-serif; 
 
        }
