--- a/contact.htm
+++ b/contact.htm
@@ -112,6 +112,7 @@
         }
       
         form {
+            background-color:dimgray;    
            margin-left: auto;
             margin-right: auto;
             width: 800px;
