--- a/contact.htm
+++ b/contact.htm
@@ -112,7 +112,9 @@
         }
       
         form {
-            background-color:dimgray;    
+             background-image: url(images/transparency.png);
+            background-repeat: no-repeat;
+            background-size: cover;
            margin-left: auto;
             margin-right: auto;
             width: 800px;
