--- a/assets.htm
+++ b/assets.htm
@@ -69,6 +69,9 @@
         }
 
         table {
+             background-image: url(images/transparency.png);
+            background-repeat: no-repeat;
+            background-size: cover;
             margin-left: auto;
             margin-right: auto;
             padding-left: 15px;
