--- a/packages.htm
+++ b/packages.htm
@@ -44,7 +44,7 @@
         a{
           padding-left: 15px;
              padding-right: 15px;
-            color: lightgray;
+            color: lightblue;
             font-size: large;
              font-family: Verdana, Helvetica, sans-serif;
         }
@@ -67,12 +67,15 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         table{
+             background-image: url(images/transparency.png);
+            background-repeat: no-repeat;
+            background-size: cover;
             margin-left: auto;
              margin-right: auto;
              padding-left: 15px;
              padding-right: 15px;
             border: 2px solid;
-            border-color: gray;
+            border-color: lightblue;
             border-width:thick;
             column-rule-width:medium;
             color: white;
