--- a/assets.htm
+++ b/assets.htm
@@ -44,7 +44,7 @@
         a {
             padding-left: 15px;
             padding-right: 15px;
-            color: lightgray;
+            color: lightsalmon;
             font-size: large;
              font-family: Verdana, Helvetica, sans-serif;
         }
@@ -74,10 +74,11 @@
             background-size: cover;
             margin-left: auto;
             margin-right: auto;
+            width: auto;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
-            border-color: gray;
+            border-color: lightsalmon;
             border-width:thick;
             column-rule-width:medium;
             color: white;
