--- a/assets.htm
+++ b/assets.htm
@@ -74,7 +74,7 @@
             background-size: cover;
             margin-left: auto;
             margin-right: auto;
-            width: auto;
+            width: 1024px;
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
