--- a/packages.htm
+++ b/packages.htm
@@ -72,6 +72,7 @@
             background-size: cover;
             margin-left: auto;
              margin-right: auto;
+             width: 1024px;
              padding-left: 15px;
              padding-right: 15px;
             border: 2px solid;
