--- a/contact.htm
+++ b/contact.htm
@@ -58,7 +58,7 @@
 
           input:hover
         {
-          color:lightblue;
+          color:gray;
         }
         h1 {
             margin-top: 30px;
