--- a/contact.htm
+++ b/contact.htm
@@ -45,7 +45,7 @@
         }
           a:hover
         {
-            color:lightgreen;
+            color:lightsalmon;
         }
           a:active
         {
