--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
         }
           a:hover
         {
-            color:lightgreen;
+            color:lightsalmon;
         }
           a:active
         {
