--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
         }
           a:active
         {
-            color:darkgreen;
+            color:orange;
         }
          body {
             background-image: url(images/indexbackground.jpg);
