--- a/contact.htm
+++ b/contact.htm
@@ -49,7 +49,7 @@
         }
           a:active
         {
-            color:darkgreen;
+            color:orange;
         }
           option:hover 
         {
