--- a/contact.htm
+++ b/contact.htm
@@ -121,8 +121,8 @@
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
-            border-color: lightblue;
-            border-width:thick;
+            border-color: lightsalmon;
+            border-width:medium;
             color: white;
             text-align: center;
             font-family: Verdana, Helvetica, sans-serif;
