--- a/contact.htm
+++ b/contact.htm
@@ -144,7 +144,7 @@
             Dimension Assets
         </h1>
         <h2 style="text-align:center">
-            Contact Information
+            Contact Us
         </h2>
     </blockquote>
     <hr/>
