--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@
     <div style="text-align:center">
         <a href="assets.htm">Assets</a>
         <a href="packages.htm">Packages</a>
-        <a href="contact.htm">Contact </a>
+        <a href="contact.htm">Contact Us </a>
     </div>
     
     <blockquote>
