--- a/contact.htm
+++ b/contact.htm
@@ -85,7 +85,7 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         
-       input, select
+       input
        {
            margin-left: 1px;
             margin-right: 25px;
@@ -94,6 +94,10 @@
            border-width: thin;
             font-family: Verdana, Helvetica, sans-serif;       
         }
+       select{
+           margin: 30px;
+            font-family: Verdana, Helvetica, sans-serif;
+       }
 
        textarea
        {
