--- a/contact.htm
+++ b/contact.htm
@@ -95,7 +95,8 @@
             font-family: Verdana, Helvetica, sans-serif;       
         }
        select{
-           margin: 30px;
+           margin-left: 30px;
+             margin-right: 30px;
             font-family: Verdana, Helvetica, sans-serif;
        }
 
