--- a/assets.htm
+++ b/assets.htm
@@ -95,7 +95,10 @@
 <body>
     <div style="text-align:center">
         <a href="index.htm">Home</a>
+        <a href="packages.htm">Packages</a>
+        <a href="contact.htm">Contact Us </a>
     </div>
+
 
     <blockquote>
         <h1 style="text-align:center">
