--- a/contact.htm
+++ b/contact.htm
@@ -142,6 +142,8 @@
 <body>
     <div style="text-align:center">
         <a href="index.htm">Home</a>
+        <a href="assets.htm">Assets</a>
+        <a href="packages.htm">Packages</a>
     </div>
 
     <blockquote>
