--- a/packages.htm
+++ b/packages.htm
@@ -93,6 +93,8 @@
 <body>
     <div style="text-align:center">
         <a href="index.htm">Home</a>
+        <a href="assets.htm">Assets</a>
+        <a href="contact.htm">Contact Us </a>
     </div>
         
     <blockquote>
