--- a/contact.htm
+++ b/contact.htm
@@ -89,7 +89,7 @@
        {
            margin-left: 1px;
             margin-right: 25px;
-           border-color: lightsalmon;
+           border-color: lightblue;
            border-bottom-style: solid;
            border-width: thin;
             font-family: Verdana, Helvetica, sans-serif;       
@@ -105,7 +105,7 @@
            margin-left:auto;
             margin-right:auto;
             width: 100%;
-            border-color: lightsalmon;
+            border-color: lightblue;
            border-bottom-style: solid;
            border-width: thin;
             font-family: Verdana, Helvetica, sans-serif; 
