--- a/contact.htm
+++ b/contact.htm
@@ -87,8 +87,8 @@
         
        input
        {
-           margin-left: 1px;
-            margin-right: 40px;
+           margin-left: auto;
+           margin-right: auto;
            border-color: lightblue;
            border-bottom-style: solid;
            border-width: medium;
