--- a/contact.htm
+++ b/contact.htm
@@ -91,7 +91,7 @@
            margin-right: auto;
            border-color: lightblue;
            border-bottom-style: solid;
-           border-width: medium;
+           border-width: thin;
             font-family: Verdana, Helvetica, sans-serif;       
         }
        select{
@@ -107,7 +107,7 @@
             width: 100%;
             border-color: lightblue;
            border-bottom-style: solid;
-           border-width: medium;
+           border-width: thin;
             font-family: Verdana, Helvetica, sans-serif; 
 
        }
