--- a/contact.htm
+++ b/contact.htm
@@ -202,8 +202,7 @@
             </label>
             <br/>
             <br />
-            <textarea name="comments" rows="10">
-            </textarea>
+            <textarea name="comments" rows="10"></textarea>
             <br />
             <br />
             <input type="submit" value="Submit Form" />
