--- a/contact.htm
+++ b/contact.htm
@@ -28,6 +28,22 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
 
+        input.button1{
+            background-color: lightsalmon;
+             border:none;
+              padding: 15px 32px;
+            color: white;
+            text-align:center;
+        }
+         input.button2{
+              background-color: lightblue;
+              border:none;
+              padding: 15px 32px;
+            color: white;
+            text-align:center;
+
+        }
+
         a {
             
             padding-left: 15px;
@@ -205,8 +221,8 @@
             <textarea name="comments" rows="10"></textarea>
             <br />
             <br />
-            <input type="submit" value="Submit Form" />
-            <input type="reset" value="Clear Form" />
+            <input type="submit" value="Submit Form" class="button2" />
+            <input type="reset" value="Clear Form" class="button1" />
         </h3>
     </form>
 </body>
