--- a/contact.htm
+++ b/contact.htm
@@ -31,6 +31,8 @@
         input.button1{
             background-color: lightsalmon;
              border:none;
+             font-size: 18px;
+            
               padding: 15px 32px;
             color: white;
             text-align:center;
@@ -38,6 +40,7 @@
          input.button2{
               background-color: lightblue;
               border:none;
+               font-size: 18px;
               padding: 15px 32px;
             color: white;
             text-align:center;
