--- a/contact.htm
+++ b/contact.htm
@@ -34,7 +34,7 @@
              font-size: 18px;
             
               padding: 15px 32px;
-            color: white;
+            color: darkgrey;
             text-align:center;
         }
          input.button2{
@@ -42,7 +42,7 @@
               border:none;
                font-size: 18px;
               padding: 15px 32px;
-            color: white;
+            color: darkgrey;
             text-align:center;
 
         }
