--- a/contact.htm
+++ b/contact.htm
@@ -29,7 +29,7 @@
         }
 
         input.button1{
-            background-color: lightsalmon;
+            background-image: url(images/submit.png);
              border:none;
              font-size: 18px;
             
@@ -38,7 +38,7 @@
             text-align:center;
         }
          input.button2{
-              background-color: lightblue;
+              background-image: url(images/clear.png);
               border:none;
                font-size: 18px;
               padding: 15px 32px;
@@ -224,8 +224,8 @@
             <textarea name="comments" rows="10"></textarea>
             <br />
             <br />
-            <input type="submit" value="Submit Form" class="button2" />
-            <input type="reset" value="Clear Form" class="button1" />
+            <input type="submit"  class="button1" />
+            <input type="reset"  class="button2" />
         </h3>
     </form>
 </body>
