--- a/contact.htm
+++ b/contact.htm
@@ -30,6 +30,7 @@
 
         input.button1{
             background-image: url(images/submit.png);
+            background-size: cover;
              border:none;
              font-size: 18px;
             
@@ -39,6 +40,7 @@
         }
          input.button2{
               background-image: url(images/clear.png);
+              background-size: cover;
               border:none;
                font-size: 18px;
               padding: 15px 32px;
