--- a/contact.htm
+++ b/contact.htm
@@ -226,8 +226,8 @@
             <textarea name="comments" rows="10"></textarea>
             <br />
             <br />
-            <input type="submit"  class="button1" />
-            <input type="reset"  class="button2" />
+            <input type="submit" value="" class="button1" />
+            <input type="reset" value="" class="button2" />
         </h3>
     </form>
 </body>
