--- a/contact.htm
+++ b/contact.htm
@@ -30,7 +30,7 @@
 
         input.button1{
             background-image: url(images/submit.png);
-            background-size: cover;
+            background-size: 32px 128px;
              border:none;
              font-size: 18px;
               padding: 32px 128px;
@@ -39,7 +39,7 @@
         }
          input.button2{
               background-image: url(images/clear.png);
-              background-size: cover;
+              background-size: 32px 128px;
               border:none;
                font-size: 18px;
               padding: 32px 128px;
