--- a/contact.htm
+++ b/contact.htm
@@ -30,19 +30,21 @@
 
         input.button1{
             background-image: url(images/submit.png);
-            background-size: 32px 128px;
+            background-size: 128px 32px;
+            background-repeat:no-repeat;
              border:none;
              font-size: 18px;
-              padding: 32px 128px;
+              padding: 10px 10px;
             color: darkgrey;
             text-align:center;
         }
          input.button2{
               background-image: url(images/clear.png);
-              background-size: 32px 128px;
+              background-size: 128px 32px;
+              background-repeat:no-repeat;
               border:none;
                font-size: 18px;
-              padding: 32px 128px;
+              padding: 10px 10px;
             color: darkgrey;
             text-align:center;
 
