--- a/contact.htm
+++ b/contact.htm
@@ -30,8 +30,10 @@
 
         input.button1{
             background-image: url(images/submit.png);
-            background-size: 128px 32px;
+            background-size: cover;
             background-repeat:no-repeat;
+            width: 128px;
+            height: 32px;
              border:none;
              font-size: 18px;
               padding: 10px 10px;
@@ -40,8 +42,10 @@
         }
          input.button2{
               background-image: url(images/clear.png);
-              background-size: 128px 32px;
+              background-size: cover;
               background-repeat:no-repeat;
+               width: 128px;
+            height: 32px;
               border:none;
                font-size: 18px;
               padding: 10px 10px;
