--- a/contact.htm
+++ b/contact.htm
@@ -32,6 +32,7 @@
             background-image: url(images/submit.png);
             background-size: cover;
             background-repeat:no-repeat;
+             opacity: 0;
             width: 128px;
             height: 32px;
              border:none;          
@@ -42,6 +43,7 @@
               background-image: url(images/clear.png);
               background-size: cover;
               background-repeat:no-repeat;
+              opacity: 0;
                width: 128px;
             height: 32px;
               border:none;
