--- a/contact.htm
+++ b/contact.htm
@@ -228,7 +228,7 @@
             <br />
             <br />
             <input type="submit" value="Submit" class="button1" />
-            <input type="reset" value="Clear" class="button2" />
+            <input type="reset" value="Reset" class="button2" />
         </h3>
     </form>
 </body>
