--- a/contact.htm
+++ b/contact.htm
@@ -125,7 +125,8 @@
        {
            margin-left:auto;
             margin-right:auto;
-            width: 75%;
+            width: 85%;
+            padding-right: 5px;
             border-color: lightblue;
            border-bottom-style: solid;
            border-width: thin;
