--- a/contact.htm
+++ b/contact.htm
@@ -110,7 +110,7 @@
        {
            margin-left: auto;
            margin-right: auto;
-           border-color: lightblue;
+           border-color: lightsalmon;
            border-bottom-style: solid;
            border-width: thin;
             font-family: Verdana, Helvetica, sans-serif;       
@@ -127,7 +127,7 @@
             margin-right:auto;
             width: 85%;
             padding-right: 5px;
-            border-color: lightblue;
+            border-color: lightsalmon;
            border-bottom-style: solid;
            border-width: thin;
             font-family: Verdana, Helvetica, sans-serif; 
@@ -147,7 +147,7 @@
             margin-top: 25px;
             width: 800px;
             padding-left: 5px;
-            padding-right: 10px;
+            padding-right: 5px;
             border: 2px solid;
             border-color: lightsalmon;
             border-width:medium;
