--- a/contact.htm
+++ b/contact.htm
@@ -112,7 +112,7 @@
            margin-right: auto;
            border-color: lightsalmon;
            border-bottom-style: solid;
-           border-width: thin;
+           border-width: medium;
             font-family: Verdana, Helvetica, sans-serif;       
         }
        select{
@@ -128,7 +128,7 @@
             width: 90%;
             border-color: lightsalmon;
            border-bottom-style: solid;
-           border-width: thin;
+           border-width: medium;
             font-family: Verdana, Helvetica, sans-serif; 
 
        }
