--- a/contact.htm
+++ b/contact.htm
@@ -119,6 +119,9 @@
            margin-left: 5px;
              margin-right: 5px;
             font-family: Verdana, Helvetica, sans-serif;
+              border-color: lightsalmon;
+           border-bottom-style: solid;
+           border-width: medium;
        }
 
        textarea
