--- a/contact.htm
+++ b/contact.htm
@@ -106,6 +106,10 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         
+        input:hover{
+
+            background-color:lightsalmon;
+        }
        input
        {
            margin-left: auto;
