--- a/contact.htm
+++ b/contact.htm
@@ -106,9 +106,20 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         
-        input:hover{
+        input.button1:hover{
 
-            background-color:lightsalmon;
+            background-color:white;
+            color:salmon;
+            border-style:solid;
+            border-color:salmon;
+        }
+
+        input.button2:hover{
+
+            background-color:white;
+            color:cornflowerblue;
+              border-style:solid;
+            border-color:cornflowerblue;
         }
        input
        {
