--- a/contact.htm
+++ b/contact.htm
@@ -129,8 +129,8 @@
         }
        input
        {
-           margin-left: auto;
-           margin-right: auto;
+           margin-left: 10px;
+           margin-right: 10px;
            border-color: lightsalmon;
            border-bottom-style: solid;
            border-width: medium;
