--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,10 @@
         {
             color:orange;
         }
+          @font-face {
+            font-family: spaceman;
+            src: url(fonts/SPACEMAN.ttf);
+        }
          body {
             background-image: url(images/indexbackground.jpg);
             background-repeat: no-repeat;
@@ -48,7 +52,7 @@
         h1{
             color:white;
             font-size: 2.7em;
-            font-family: Verdana, Helvetica, sans-serif;
+            font-family: spaceman;
         }
          h3{
             color:white;
