--- a/packages.htm
+++ b/packages.htm
@@ -20,6 +20,10 @@
         {
             color:orange;
         }
+          @font-face {
+            font-family: spaceman;
+            src: url(fonts/SPACEMAN.ttf);
+        }
         body {
             background-image: url(images/indexbackground2.jpg);
             background-repeat: no-repeat;
@@ -52,7 +56,7 @@
              margin-top: 30px;
             color: white;
            
-            font-family: Verdana, Helvetica, sans-serif;
+            font-family: spaceman;
         }
           h2 {
             margin-top: 30px;
