--- a/contact.htm
+++ b/contact.htm
@@ -77,6 +77,10 @@
         {
             color:orange;
         }
+          @font-face {
+            font-family: spaceman;
+            src: url(fonts/SPACEMAN.ttf);
+        }
           option:hover 
         {
          color:lightgreen;
@@ -89,7 +93,7 @@
         h1 {
             margin-top: 30px;
             color: white;
-            font-family: Verdana, Helvetica, sans-serif;
+            font-family: spaceman;
         }
 
         h2 {
