--- a/contact.htm
+++ b/contact.htm
@@ -85,11 +85,7 @@
         {
          color:lightgreen;
         }
-
-          input:hover
-        {
-          color:gray;
-        }
+ 
         h1 {
             margin-top: 30px;
             color: white;
@@ -143,7 +139,8 @@
         input.radial
        {
            margin-left: 5px;
-           margin-right: 15px;    
+           margin-right: 15px; 
+           background-color:cornflowerblue;   
         }
        select{
            margin-left: 5px;
