--- a/contact.htm
+++ b/contact.htm
@@ -140,7 +140,7 @@
        {
            margin-left: 5px;
            margin-right: 15px; 
-           background-color: cornflowerblue;   
+           color: cornflowerblue;   
         }
        select{
            margin-left: 5px;
