--- a/contact.htm
+++ b/contact.htm
@@ -31,7 +31,7 @@
         input.button1{
           
           -webkit-transition-duration: 0.4s; 
-          font-size:x-large;
+          font-size:larger;
             background-color: salmon;
             color: white;
             border-radius: 8px;
@@ -43,13 +43,13 @@
          input.button2{
 
               -webkit-transition-duration: 0.4s; 
-             font-size:x-large;
+             font-size:larger;
             background-color: cornflowerblue;
             color: white;
              border-radius: 8px;
              border-style:solid;
             border-color:cornflowerblue;
-              padding: 10px 15px;
+              padding: 5px 7px;
             text-align:center;
 
         }
