--- a/contact.htm
+++ b/contact.htm
@@ -87,6 +87,7 @@
         }
  
         h1 {
+            font-size:larger;
             margin-top: 30px;
             color: white;
             font-family: spaceman;
