--- a/contact.htm
+++ b/contact.htm
@@ -87,7 +87,7 @@
         }
  
         h1 {
-            font-size:larger;
+            font-size:xx-large;
             margin-top: 30px;
             color: white;
             font-family: spaceman;
