--- a/packages.htm
+++ b/packages.htm
@@ -83,7 +83,7 @@
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
-            border-color: lightsalmon;
+            border-color: lightblue;
             border-width: thick;
             column-rule-width: medium;
             color: white;
@@ -100,7 +100,7 @@
 <body>
     <div style="text-align:center">
         <a href="index.htm">Home</a>
-        <a href="packages.htm">Packages</a>
+        <a href="assets.htm">Assets</a>
         <a href="contact.htm">Contact Us </a>
     </div>
 
