--- a/contact.htm
+++ b/contact.htm
@@ -132,7 +132,7 @@
        {
            margin-left: auto;
            margin-right: auto;
-           border-color: lightsalmon;
+           border-color: lightblue;
            border-bottom-style: solid;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif;       
@@ -156,7 +156,7 @@
            margin-left:auto;
             margin-right:auto;
             width: 90%;
-            border-color: lightsalmon;
+            border-color: lightblue;
            border-bottom-style: solid;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif; 
