--- a/contact.htm
+++ b/contact.htm
@@ -32,11 +32,11 @@
           
           -webkit-transition-duration: 0.4s; 
           font-size:larger;
-            background-color: salmon;
+            background-color: lightsalmon;
             color: white;
             border-radius: 8px;
             border-style:solid;
-            border-color:salmon;          
+            border-color:lightsalmon;          
             padding: 5px 15px;    
             text-align:center;
         }
@@ -44,11 +44,11 @@
 
               -webkit-transition-duration: 0.4s; 
              font-size:larger;
-            background-color: cornflowerblue;
+            background-color: lightblue;
             color: white;
              border-radius: 8px;
              border-style:solid;
-            border-color:cornflowerblue;
+            border-color:lightblue;
               padding: 5px 7px;
             text-align:center;
 
@@ -115,17 +115,17 @@
         input.button1:hover{
 
             background-color:white;
-            color:salmon;
+            color:lightsalmon;
             border-style:solid;
-            border-color:salmon;
+            border-color:lightsalmon;
         }
 
         input.button2:hover{
 
             background-color:white;
-            color:cornflowerblue;
+            color:lightblue;
               border-style:solid;
-            border-color:cornflowerblue;
+            border-color:lightblue;
             
         }
        input
@@ -146,7 +146,7 @@
            margin-left: 5px;
              margin-right: 5px;
             font-family: Verdana, Helvetica, sans-serif;
-              border-color: lightsalmon;
+              border-color: lightblue;
            border-bottom-style: solid;
            border-width: medium;
        }
