--- a/contact.htm
+++ b/contact.htm
@@ -44,11 +44,11 @@
 
               -webkit-transition-duration: 0.4s; 
              font-size:larger;
-            background-color: lightblue;
+            background-color: cornflowerblue;
             color: white;
              border-radius: 8px;
              border-style:solid;
-            border-color:lightblue;
+            border-color:cornflowerblue;
               padding: 5px 7px;
             text-align:center;
 
@@ -123,9 +123,9 @@
         input.button2:hover{
 
             background-color:white;
-            color:lightblue;
+            color:cornflowerblue;
               border-style:solid;
-            border-color:lightblue;
+            border-color:cornflowerblue;
             
         }
        input
