--- a/contact.htm
+++ b/contact.htm
@@ -132,7 +132,7 @@
        {
            margin-left: auto;
            margin-right: auto;
-           border-color: lightblue;
+           border-color: cornflowerblue;
            border-bottom-style: solid;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif;       
@@ -146,7 +146,7 @@
            margin-left: 5px;
              margin-right: 5px;
             font-family: Verdana, Helvetica, sans-serif;
-              border-color: lightblue;
+              border-color: cornflowerblue;
            border-bottom-style: solid;
            border-width: medium;
        }
@@ -156,7 +156,7 @@
            margin-left:auto;
             margin-right:auto;
             width: 90%;
-            border-color: lightblue;
+            border-color: cornflowerblue;
            border-bottom-style: solid;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif; 
