--- a/packages.htm
+++ b/packages.htm
@@ -85,6 +85,7 @@
             border: 2px solid;
             border-color: lightblue;
             border-width: thick;
+            border-radius: 12px;
             column-rule-width: medium;
             color: white;
             text-align: center;
