--- a/assets.htm
+++ b/assets.htm
@@ -84,6 +84,7 @@
             border: 2px solid;
             border-color: lightsalmon;
             border-width:thick;
+            border-radius: 12px;
             column-rule-width:medium;
             color: white;
             text-align: center;
