--- a/assets.htm
+++ b/assets.htm
@@ -72,6 +72,13 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
 
+        td{
+             border: 2px solid;
+            border-color: lightsalmon;
+            border-width: thick;
+
+        }
+
         table {
              background-image: url(images/transparency.png);
             background-repeat: no-repeat;
