--- a/packages.htm
+++ b/packages.htm
@@ -73,6 +73,13 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
 
+        td{
+
+            border: 2px solid;
+            border-color: lightblue;
+            border-width: thick;
+        }
+
         table {
             background-image: url(images/transparency.png);
             background-repeat: no-repeat;
