--- a/assets.htm
+++ b/assets.htm
@@ -73,7 +73,9 @@
         }
 
         td{
-             border: 2px solid;
+
+             border: none;
+             border-top: 2px solid;
             border-color: lightsalmon;
             border-width: thick;
 
