--- a/packages.htm
+++ b/packages.htm
@@ -75,7 +75,8 @@
 
         td{
 
-            border: 2px solid;
+             border: none;
+             border-top: 2px solid;
             border-color: lightblue;
             border-width: thick;
         }
