--- a/assets.htm
+++ b/assets.htm
@@ -74,7 +74,7 @@
 
         td{
 
-             border: none;
+              border: 1px solid;
              border-top: 2px solid;
             border-color: lightsalmon;
             border-width: thick;
