--- a/packages.htm
+++ b/packages.htm
@@ -75,7 +75,7 @@
 
         td{
 
-             border: none;
+             border: 1px solid;
              border-top: 2px solid;
             border-color: lightblue;
             border-width: thick;
