--- a/assets.htm
+++ b/assets.htm
@@ -74,9 +74,10 @@
 
         td{
 
-               border: 2px solid;
+             border: 2px solid;
              border-top: 4px solid;
-            border-color: lightsalmon;
+             border-bottom: none;
+             border-color: lightsalmon;
             
 
         }
