--- a/packages.htm
+++ b/packages.htm
@@ -77,7 +77,8 @@
 
              border: 2px solid;
              border-top: 4px solid;
-            border-color: lightblue;
+             border-bottom: none;
+             border-color: lightblue;
            
         }
 
