--- a/assets.htm
+++ b/assets.htm
@@ -73,13 +73,17 @@
         }
 
         td{
-
              border: 2px solid;
              border-top: 4px solid;
              border-bottom: none;
              border-color: lightsalmon;
-            
+        }
 
+         th{
+             border: 4px solid;
+             border-top: none;
+             border-bottom: none;
+             border-color: lightsalmon;
         }
 
         table {
@@ -95,7 +99,6 @@
             border-color: lightsalmon;
             border-width:thick;
             border-radius: 12px;
-            column-rule-width:medium;
             color: white;
             text-align: center;
             font-family: Verdana, Helvetica, sans-serif;
