--- a/packages.htm
+++ b/packages.htm
@@ -74,12 +74,18 @@
         }
 
         td{
-
              border: 2px solid;
              border-top: 4px solid;
              border-bottom: none;
              border-color: lightblue;
            
+        }
+
+         th{
+             border: 4px solid;
+             border-top: none;
+             border-bottom: none;
+             border-color: lightsalmon;
         }
 
         table {
