--- a/packages.htm
+++ b/packages.htm
@@ -74,8 +74,7 @@
         }
 
         td{
-             border: 2px solid;
-             border-top: 4px solid;
+             border: 4px solid;
              border-bottom: none;
              border-color: lightblue;
            
@@ -85,7 +84,7 @@
              border: 4px solid;
              border-top: none;
              border-bottom: none;
-             border-color: lightsalmon;
+             border-color: lightblue;
         }
 
         table {
@@ -101,7 +100,6 @@
             border-color: lightblue;
             border-width: thick;
             border-radius: 12px;
-            column-rule-width: medium;
             color: white;
             text-align: center;
             font-family: Verdana, Helvetica, sans-serif;
