--- a/assets.htm
+++ b/assets.htm
@@ -85,6 +85,13 @@
              border-color: lightsalmon;
         }
 
+         image{
+             border: none;
+             border-bottom: 4px solid;
+             border-bottom-color: lightsalmon;
+
+         }
+
         table {
              background-image: url(images/transparency.png);
             background-repeat: no-repeat;
