--- a/packages.htm
+++ b/packages.htm
@@ -87,6 +87,13 @@
              border-color: lightblue;
         }
 
+          image{
+             border: none;
+             border-bottom: 4px solid;
+             border-bottom-color: lightblue;
+
+         }
+
         table {
             background-image: url(images/transparency.png);
             background-repeat: no-repeat;
