--- a/assets.htm
+++ b/assets.htm
@@ -85,7 +85,7 @@
              border-color: lightsalmon;
         }
 
-         image{
+         img{
              border: none;
              border-bottom: 2px solid;
              border-bottom-color: lightsalmon;
