--- a/packages.htm
+++ b/packages.htm
@@ -87,7 +87,7 @@
              border-color: lightblue;
         }
 
-          image{
+          img{
              border: none;
              border-bottom: 2px solid;
              border-bottom-color: lightblue;
