--- a/assets.htm
+++ b/assets.htm
@@ -87,7 +87,7 @@
 
          img{
              border: none;
-             border-bottom: 2px solid;
+             border-bottom: 2px ridge;
              border-bottom-color: lightsalmon;
 
          }
