--- a/packages.htm
+++ b/packages.htm
@@ -89,7 +89,7 @@
 
           img{
              border: none;
-             border-bottom: 2px solid;
+             border-bottom: 2px ridge;
              border-bottom-color: lightblue;
 
          }
