--- a/assets.htm
+++ b/assets.htm
@@ -87,8 +87,8 @@
 
          img{
              border: none;
-             border-bottom: 2px ridge;
-             border-bottom-color: lightsalmon;
+             border: 2px ridge;
+             border-bottom-color: salmon;
 
          }
 
