--- a/packages.htm
+++ b/packages.htm
@@ -89,8 +89,8 @@
 
           img{
              border: none;
-             border-bottom: 2px ridge;
-             border-bottom-color: lightblue;
+             border: 2px ridge;
+             border-bottom-color: cornflowerblue;
 
          }
 
