--- a/assets.htm
+++ b/assets.htm
@@ -88,8 +88,7 @@
          img{
              border: none;
              border: 2px ridge;
-             border-bottom-color: salmon;
-
+             border-color: salmon;
          }
 
         table {
