--- a/packages.htm
+++ b/packages.htm
@@ -89,9 +89,8 @@
 
           img{
              border: none;
-             border: 2px ridge;
-             border-bottom-color: cornflowerblue;
-
+             border-bottom: 2px ridge;
+             border-color: cornflowerblue;
          }
 
         table {
