--- a/packages.htm
+++ b/packages.htm
@@ -88,8 +88,7 @@
         }
 
           img{
-             border: none;
-             border-bottom: 2px ridge;
+             border: 3px ridge;
              border-color: cornflowerblue;
          }
 
