--- a/assets.htm
+++ b/assets.htm
@@ -62,12 +62,12 @@
         h2 {
             margin-top: 30px;
             margin-bottom: 15px;
-            color: white;
+            color: lightsalmon;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
         h3 {
-            color: white;
+            color: salmon;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
