--- a/packages.htm
+++ b/packages.htm
@@ -63,12 +63,12 @@
         h2 {
             margin-top: 30px;
             margin-bottom: 0px;
-            color: white;
+            color: lightblue;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
         h3 {
-            color: white;
+            color: cornflowerblue;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
