--- a/assets.htm
+++ b/assets.htm
@@ -99,7 +99,7 @@
             width: 1024px;
             padding-left: 15px;
             padding-right: 15px;
-            border: 4px solid;
+            border: 4px ridge;
             border-color: lightsalmon;
             border-radius: 12px;
             color: white;
