--- a/packages.htm
+++ b/packages.htm
@@ -101,7 +101,7 @@
             width: 1024px;
             padding-left: 15px;
             padding-right: 15px;
-            border: 4px solid;
+            border: 4px ridge;
             border-color: lightblue;
             border-radius: 12px;
             color: white;
