--- a/assets.htm
+++ b/assets.htm
@@ -73,13 +73,13 @@
         }
 
         td{
-             border: 4px solid;
+             border: 4px ridge;
              border-bottom: none;
              border-color: lightsalmon;
         }
 
          th{
-             border: 4px solid;
+             border: 4px ridge;
              border-top: none;
              border-bottom: none;
              border-color: lightsalmon;
