--- a/packages.htm
+++ b/packages.htm
@@ -74,14 +74,14 @@
         }
 
         td{
-             border: 4px solid;
+             border: 4px ridge;
              border-bottom: none;
              border-color: lightblue;
            
         }
 
          th{
-             border: 4px solid;
+             border: 4px ridge;
              border-top: none;
              border-bottom: none;
              border-color: lightblue;
