--- a/contact.htm
+++ b/contact.htm
@@ -133,7 +133,7 @@
            margin-left: auto;
            margin-right: auto;
            border-color: cornflowerblue;
-           border-bottom-style: solid;
+           border-bottom-style: ridge;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif;       
         }
@@ -147,7 +147,7 @@
              margin-right: 5px;
             font-family: Verdana, Helvetica, sans-serif;
               border-color: cornflowerblue;
-           border-bottom-style: solid;
+           border-bottom-style: ridge;
            border-width: medium;
        }
 
@@ -157,7 +157,7 @@
             margin-right:auto;
             width: 90%;
             border-color: cornflowerblue;
-           border-bottom-style: solid;
+           border-bottom-style: ridge;
            border-width: medium;
             font-family: Verdana, Helvetica, sans-serif; 
 
@@ -177,7 +177,7 @@
             width: 800px;
             padding-left: 5px;
             padding-right: 5px;
-            border: 2px solid;
+            border: 2px ridge;
             border-color: lightsalmon;
             border-width:medium;
             border-radius: 12px;
