--- a/assets.htm
+++ b/assets.htm
@@ -67,7 +67,7 @@
         }
 
         h3 {
-            color: salmon;
+            color: white;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
