--- a/packages.htm
+++ b/packages.htm
@@ -68,7 +68,7 @@
         }
 
         h3 {
-            color: cornflowerblue;
+            color: white;
             font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
