--- a/contact.htm
+++ b/contact.htm
@@ -96,7 +96,7 @@
         h2 {
             margin-top: 30px;
             margin-bottom: 20px;
-            color: white;
+            color: cornflowerblue;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
