--- a/contact.htm
+++ b/contact.htm
@@ -29,11 +29,11 @@
         {
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: cornflowerblue;
+           background-color: salmon;
            color: white;
            border-radius: 8px;
            border-style:solid;
-           border-color:cornflowerblue;
+           border-color:salmon;
            padding: 5px 7px;
            text-align:center;
         }
@@ -86,7 +86,7 @@
         {
             margin-top: 30px;
             margin-bottom: 20px;
-            color: cornflowerblue;
+            color: salmon;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
@@ -114,7 +114,7 @@
         input.button2:hover
         {
            background-color:white;
-           color:cornflowerblue;
+           color:salmon;
            border-style:solid;
            border-color:cornflowerblue;           
         }
@@ -122,7 +122,7 @@
        {
            margin-left: auto;
            margin-right: auto;
-           border-color: cornflowerblue;
+           border-color: salmon;
            border-bottom-style: ridge;
            border-width: medium;
            font-family: Verdana, Helvetica, sans-serif;       
@@ -137,7 +137,7 @@
            margin-left: 5px;
            margin-right: 5px;
            font-family: Verdana, Helvetica, sans-serif;
-           border-color: cornflowerblue;
+           border-color: salmon;
            border-bottom-style: ridge;
            border-width: medium;
        }
@@ -147,7 +147,7 @@
            margin-left:auto;
            margin-right:auto;
            width: 90%;
-           border-color: cornflowerblue;
+           border-color: salmon;
            border-bottom-style: ridge;
            border-width: medium;
            font-family: Verdana, Helvetica, sans-serif; 
