--- a/contact.htm
+++ b/contact.htm
@@ -116,7 +116,7 @@
            background-color:white;
            color:salmon;
            border-style:solid;
-           border-color:cornflowerblue;           
+           border-color:salmon;           
         }
        input
        {
@@ -244,8 +244,8 @@
             <textarea name="comments" rows="10"></textarea>
             <br />
             <br />
-            <input type="submit" value="Submit" class="button2" />
-            <input type="reset" value="Reset" class="button1" />
+            <input type="submit" value="Submit" class="button1" />
+            <input type="reset" value="Reset" class="button2" />
         </h3>
     </form>
 </body>
