--- a/contact.htm
+++ b/contact.htm
@@ -16,11 +16,11 @@
         {  
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: lightsalmon;
+           background-color: mediumpurple;
            color: white;
            border-radius: 8px;
            border-style:solid;
-           border-color:lightsalmon;          
+           border-color:mediumpurple;          
            padding: 5px 7px;    
            text-align:center;
         }
@@ -33,7 +33,7 @@
            color: white;
            border-radius: 8px;
            border-style:solid;
-           border-color:salmon;
+           border-color:rebeccapurple;
            padding: 5px 15px;
            text-align:center;
         }
@@ -86,7 +86,7 @@
         {
             margin-top: 30px;
             margin-bottom: 20px;
-            color: salmon;
+            color: rebeccapurple;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
@@ -107,22 +107,22 @@
         input.button1:hover
         {
             background-color:white;
-            color:lightsalmon;
+            color:mediumpurple;
             border-style:solid;
-            border-color:lightsalmon;
+            border-color:mediumpurple;
         }
         input.button2:hover
         {
            background-color:white;
            color:salmon;
            border-style:solid;
-           border-color:salmon;           
+           border-color:rebeccapurple;           
         }
        input
        {
            margin-left: auto;
            margin-right: auto;
-           border-color: salmon;
+           border-color: rebeccapurple;
            border-bottom-style: ridge;
            border-width: medium;
            font-family: Verdana, Helvetica, sans-serif;       
@@ -137,7 +137,7 @@
            margin-left: 5px;
            margin-right: 5px;
            font-family: Verdana, Helvetica, sans-serif;
-           border-color: salmon;
+           border-color: rebeccapurple;
            border-bottom-style: ridge;
            border-width: medium;
        }
@@ -147,7 +147,7 @@
            margin-left:auto;
            margin-right:auto;
            width: 90%;
-           border-color: salmon;
+           border-color: rebeccapurple;
            border-bottom-style: ridge;
            border-width: medium;
            font-family: Verdana, Helvetica, sans-serif; 
@@ -165,7 +165,7 @@
             padding-left: 5px;
             padding-right: 5px;
             border: 2px ridge;
-            border-color: lightsalmon;
+            border-color: mediumpurple;
             border-width:medium;
             border-radius: 12px;
             color: white;
