--- a/contact.htm
+++ b/contact.htm
@@ -114,7 +114,7 @@
         input.button2:hover
         {
            background-color:white;
-           color:salmon;
+           color:rebeccapurple;
            border-style:solid;
            border-color:rebeccapurple;           
         }
