--- a/contact.htm
+++ b/contact.htm
@@ -29,7 +29,7 @@
         {
            -webkit-transition-duration: 0.4s; 
            font-size:larger;
-           background-color: salmon;
+           background-color: rebeccapurple;
            color: white;
            border-radius: 8px;
            border-style:solid;
