--- a/contact.htm
+++ b/contact.htm
@@ -86,7 +86,7 @@
         {
             margin-top: 30px;
             margin-bottom: 20px;
-            color: rebeccapurple;
+            color: mediumpurple;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
