--- a/index.htm
+++ b/index.htm
@@ -64,10 +64,12 @@
             font-family: spaceman;
         }
          
-        h3
+        h3 
         {
-            color:white;
-            font-size: 1.5em;
+            margin-top: 15px;
+            margin-bottom: 15px;
+            color: white;
+            font-size: large;
             font-family: Verdana, Helvetica, sans-serif;
         }
     </style>
@@ -90,12 +92,11 @@
                 <img src="images/logo.png" height="160" width="507" /> <br/>
             </p>
         <hr />
-        <p class="major" style="text-align:center">
-           
-                Are you an independent game developer looking to take your game's graphics to the next level? <br />
-                Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
-                Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />            
-        </p>
+        <h3 style="text-align:center">
+            Are you an independent game developer looking to take your game's graphics to the next level? <br />
+            Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
+            Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
+        </h3>
         <hr />
     </blockquote>
 </body>
