--- a/assets.htm
+++ b/assets.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles/StyleMain.css">
+    <link rel="stylesheet" type="text/css" href="StyleMain.css">
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
 </head>
