--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
     
     <blockquote>
             <p class="minor" style="text-align:center">
-                <img src="images/logo.png" height="160" width="507" /> <br/>
+                <img class="title" src="images/logo.png" height="160" width="507" /> <br/>
             </p>
         <hr />
         <h3 style="text-align:center">
