--- a/assets.htm
+++ b/assets.htm
@@ -34,9 +34,9 @@
             </colgroup>
             
             <tr>
-                <td><p.picture><img src="images/character.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img src="images/item.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img src="images/structure.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/character.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/item.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/structure.jpg" height="255" width="381" /></p.picture></td>
             </tr>
             <tr>
                 <th><h3>Characters</h3><p><em>Approx.</em> $120</p></th>
@@ -44,9 +44,9 @@
                 <th><h3>Structures</h3><p><em>Approx.</em> $80</p></th>           
             </tr>       
             <tr>
-                <td><p.picture><img src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img src="images/skybox.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img src="images/texture.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/skybox.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/texture.jpg" height="255" width="381" /></p.picture></td>
             </tr>
             <tr>
                 <th><h3>Landscapes</h3><p><em>Approx.</em> $100</p></th>
