--- a/packages.htm
+++ b/packages.htm
@@ -25,7 +25,7 @@
 
     <table rules="all">
        
-         <caption style="font-size: small"><p><em>Prices are only estimates.</em></p></caption>
+         <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
        
          <colgroup>
             <col span="1" style="width: 20%;">
