--- a/assets.htm
+++ b/assets.htm
@@ -39,9 +39,9 @@
                 <td><p.picture><img class="picture" src="images/structure.jpg" height="255" width="381" /></p.picture></td>
             </tr>
             <tr>
-                <th><h3>Characters</h3><p><em>Approx.</em> $120</p></th>
-                <th><h3>Items</h3><p><em>Approx.</em> $25</p></th>
-                <th><h3>Structures</h3><p><em>Approx.</em> $80</p></th>           
+                <th><h3 class="second">Characters</h3><p><em>Approx.</em> $120</p></th>
+                <th><h3 class="second">Items</h3><p><em>Approx.</em> $25</p></th>
+                <th><h3 class="second">Structures</h3><p><em>Approx.</em> $80</p></th>           
             </tr>       
             <tr>
                 <td><p.picture><img class="picture" src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
@@ -49,9 +49,9 @@
                 <td><p.picture><img class="picture" src="images/texture.jpg" height="255" width="381" /></p.picture></td>
             </tr>
             <tr>
-                <th><h3>Landscapes</h3><p><em>Approx.</em> $100</p></th>
-                <th><h3>Skyboxes</h3><p><em>Approx.</em> $15</p></th>
-                <th><h3>Textures</h3><p><em>Approx.</em> $10</p></th>
+                <th><h3 class="second">Landscapes</h3><p><em>Approx.</em> $100</p></th>
+                <th><h3 class="second">Skyboxes</h3><p><em>Approx.</em> $15</p></th>
+                <th><h3 class="second">Textures</h3><p><em>Approx.</em> $10</p></th>
             </tr>
 
         </table>
