--- a/packages.htm
+++ b/packages.htm
@@ -34,9 +34,9 @@
         </colgroup>
        
          <tr style="font-size: x-large">
-            <th colspan="1"><h3>Small Assets</h3></th>
-            <th colspan="1"><h3>Large Assets</h3></th>
-            <th colspan="1"><h3>Complete Levels</h3></th>
+            <th colspan="1"><h3 class="second">Small Assets</h3></th>
+            <th colspan="1"><h3 class="second">Large Assets</h3></th>
+            <th colspan="1"><h3 class="second">Complete Levels</h3></th>
         </tr>;
         <tr>
             <td><p.picture><img class="picture" src="images/15package.png" height="264" width="334" /></p.picture></td>
