--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
     </div>
     
     <blockquote>
-            <p class="minor" style="text-align:center">
+            <p style="text-align:center">
                 <img class="title" src="images/logo.png" height="160" width="507" /> <br/>
             </p>
         <hr />
