--- a/contact.htm
+++ b/contact.htm
@@ -25,14 +25,14 @@
         </h2>
     </blockquote>
     <hr/>
-    <h3 style="text-align:center">
+    <h3 class="first" style="text-align:center">
         If you have any questions regarding your order, assets, asset packages, <br/>
         or you would like a price qoute for your project, please submit the form below.<br />
         We will contact you as soon as possible.
     </h3>
     <hr/>
     <form action= "" style="align-content:center">
-        <h3 style="text-align:center">
+        <h3 class="first" style="text-align:center">
             <label> First Name:
                 <input type="text" name="firstName" size="20" />
             </label>
