--- a/packages.htm
+++ b/packages.htm
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body class="secondary">
     <div style="text-align:center">
         <a href="index.htm">Home</a>
         <a href="assets.htm">Assets</a>
