--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
                 <img class="title" src="images/logo.png" height="160" width="507" /> <br/>
             </p>
         <hr />
-        <h3 class="first" style="text-align:center">
+        <h3 class="second" style="text-align:center">
             Are you an independent game developer looking to take your game's graphics to the next level? <br />
             Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
