--- a/assets.htm
+++ b/assets.htm
@@ -8,7 +8,7 @@
     <meta name="description" content="HTML5 Template">
 </head>
 
-<body class="secondary">
+<body class="products">
     <div style="text-align:center">
         <a href="index.htm">Home</a>
         <a href="packages.htm">Packages</a>
