--- a/contact.htm
+++ b/contact.htm
@@ -21,7 +21,7 @@
             Dimension Assets
         </h1>
         <h2 style="text-align:center">
-            Contact Us
+            Contact Us <br/>
         </h2>
     </blockquote>
     <hr/>
