--- a/contact.htm
+++ b/contact.htm
@@ -21,8 +21,11 @@
             Dimension Assets
         </h1>
         <h2 style="text-align:center">
-            Contact Us <br/>
+            Contact Us
         </h2>
+        <p>
+
+        </p>
     </blockquote>
     <hr/>
     <h3 class="first" style="text-align:center">
