--- a/index.htm
+++ b/index.htm
@@ -18,9 +18,9 @@
     </div>
     
     <blockquote>
-            <p style="text-align:center">
-                <img class="title" src="images/logo.png" height="160" width="507" /> <br/>
-            </p>
+        <h1 style="text-align:center">Dimension<br/>Assets<br /></h1>
+        <h2 style="text-align:center">Next Generation Game Assets<br /></h2>
+        
         <hr />
         <h3 class="first" style="text-align:center">
             Are you an independent game developer looking to take your game's graphics to the next level? <br />
