--- a/index.htm
+++ b/index.htm
@@ -17,9 +17,9 @@
         <a href="contact.htm">Contact Us</a>
     </div>
     
-    <blockquote>
-        <h1 style="text-align:center">Dimension<br/>Assets<br /></h1>
-        <h2 style="text-align:center">Next Generation Game Assets<br /></h2>
+    <blockquote style="text-align:center">
+        <h1 style="font-size:xx-large">Dimension<br/>Assets<br /></h1>
+        <h2 style="font-family:spaceman">Next Generation Game Assets<br /></h2>
         
         <hr />
         <h3 class="first" style="text-align:center">
