--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
     </div>
     
     <blockquote style="text-align:center">
-        <h1 style="font-size:xx-large">Dimension<br/>Assets<br /></h1>
+        <h1 style="font-size:50px">Dimension<br/>Assets<br /></h1>
         <h2 style="font-family:spaceman">Next Generation Game Assets<br /></h2>
         
         <hr />
