--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
  
 </head>
 
-<body class="main">
+<body class="secondary">
     
     <div style="text-align:center">
         <a href="assets.htm">Assets</a>
