--- a/contact.htm
+++ b/contact.htm
@@ -17,11 +17,9 @@
         <a href="packages.htm">Packages</a>
     </div>
 
-    <blockquote>
+    <blockquote style="text-align:center">
         <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-        <h2 style="text-align:center">
-            Contact Us
-        </h2>
+        <h2 style="font-size:25px">Next Generation Game Assets<br /></h2>
     </blockquote>
     <hr/>
     <h3 class="first" style="text-align:center">
