--- a/packages.htm
+++ b/packages.htm
@@ -16,10 +16,10 @@
         <a href="contact.htm">Contact Us</a>
     </div>
 
-    <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-    <h2 style="text-align:center">
-        Packages
-    </h2>
+    <blockquote style="text-align:center">
+        <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
+        <h2 style="font-size:25px">Next Generation Game Assets<br /></h2>
+    </blockquote>
 
     <table rules="all">
        
