--- a/packages.htm
+++ b/packages.htm
@@ -18,7 +18,7 @@
 
     <blockquote style="text-align:center">
         <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-        <h2 style="font-size:25px">Next Generation Game Assets<br /></h2>
+        <h2 style="font-size:25px">Packages<br /></h2>
     </blockquote>
 
     <table rules="all">
