--- a/assets.htm
+++ b/assets.htm
@@ -9,6 +9,11 @@
 </head>
 
 <body class="products">
+    <aside style="text-align:center">
+        <a href="index.htm">Home</a>
+        <a href="packages.htm">Packages</a>
+        <a href="contact.htm">Contact Us</a>
+    </aside>
     <div style="text-align:center">
         <a href="index.htm">Home</a>
         <a href="packages.htm">Packages</a>
